--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -44,7 +44,7 @@
       <li>
         <label>
           <span>CEP:</span><br/>
-          <%= a.text_field :zipcode, :class => "inputMedio input" %>
+          <%= a.text_field :zipcode, :class => "inputMedio input cep" %>
         </label>
       </li>
 
@@ -66,14 +66,14 @@
     <li>
       <label>
         <span>CPF:</span><br/>
-        <%= f.text_field :cpf, :class => "inputMedio input" %>
+        <%= f.text_field :cpf, :class => "inputMedio input cpf" %>
       </label>
     </li>
 
     <li>
       <label>
         <span>RG:</span><br/>
-        <%= f.text_field :rg, :class => "inputMedio input" %>
+        <%= f.text_field :rg, :class => "inputMedio input rg" %>
       </label>
     </li>
 
@@ -107,11 +107,3 @@
     </li>
   </ul>
 <% end %>
-
-<script type="text/javascript">
-    $(function(){
-        $("#provider_cpf").mask("999.999.999-99");
-        $("#provider_rg").mask("99.999.999-*");
-        $("#provider_address_attributes_zipcode").mask("99999-999");
-    });
-</script>
