--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -1,16 +1,5 @@
 <%= form_for @provider do |f| %>
-  <% if @provider.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@provider.errors.count, "error") %> prohibited this provider from being saved:</h2>
-
-      <ul>
-        <% @provider.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  <%= render "shared/error_messages", :record => @provider %>
   <ul>
     <li>
       <label>
