--- a/app/views/teams/planning.html.erb
+++ b/app/views/teams/planning.html.erb
@@ -24,36 +24,37 @@
 			<% end %>
 		</li>
 		<li>
+			<div id='planejamento'>
 			<% if @meetings.size > 0 %>
-				<table width="990" class='encontros'>
+				<table width="990" class='encontros' cellpadding='0' cellspacing='0'>
 					<tr>
-						<td valign="top">
-							<table width="200" id="guardaMeetings">
+						<td valign="top" id='listEncontros' >
+							<table width="200" id="guardaMeetings" cellpadding='0' cellspacing='0'>
 								<tr>
 									<th>Encontros</th>
 								</tr>
 								<% @meetings.each_with_index do |m, i| %>
 								<tr>
-									<td><a href="javascript:void(0);" id="<%= m.id %>" class="linkEncontro"><%=i+1%>º encontro - <%= m.date %></a></td>
+									 <td><a href="javascript:void(0);" id="<%= m.id %>" class="linkEncontro"><%=i+1%>º encontro - <%= m.date %></a></td>
 								</tr>
 								<% end %>
 							</table>
 						</td>
-						<td valign="top">
-							<table width="790" id="sacateta">
+						<td valign="top" id='listHorarios'>
+							<table width="790" id="sacateta"  cellpadding="0" cellspacing="0">
 								<tr align="center">
 									<th colspan="2">2º encontro - 15/11/2012</th>
 								</tr>
 								<tr>
 									<td colspan="2">
-										<table id="tabelaResults">
+										<table id="tabelaResults" cellpadding="0" cellspacing="0" width="790">
 										</table>
 									</td>
 								</tr>
 								<tr>
 									<td colspan="2">
-										<a href="javascript:void(0);" style="float:right;" id="salvarHorario" class="btEnviarForm">Salvar</a>
-										<a href="javascript:void(0);" style="float:right;" id="novoHorario" class="btEnviarForm">Novo</a>
+										<a href="javascript:void(0);" style="margin:15px;float:right;" id="salvarHorario" class="btEnviarForm">Salvar</a>
+										<a href="javascript:void(0);" style="margin:15px;float:right;" id="novoHorario" class="btEnviarForm">Novo</a>
 									</td>
 								</tr>
 							</table>
@@ -61,32 +62,8 @@
 					</tr>
 				</table>
 				
-				
+			</div>	
 			<% end %>
-			<table width="990" border="1" bgcolor="#e7f3f9">
-					<tr>
-						<td>encontros
-							<table>
-								<tr>
-									<th>Encontros</th>
-								<tr>
-								<tr>
-									<td>DATAS</td>
-								<tr>
-								<tr>
-									<td>DATAS</td>
-								<tr>
-								<tr>
-									<td>DATAS</td>
-								<tr>
-								<tr>
-									<td>DATAS</td>
-								<tr>								
-							</table>
-						</td>
-						<td>exibição dos encontros</td>
-					</tr>
-				</table>
 		</li>
 	</ul>
 
@@ -99,9 +76,9 @@
 			});
 
 			var _li = "";
-			_li += "<tr valign='top' class='tiraInput'>";
-			_li += "	<td><input type='text' id='campoData' style='border:1px solid #f00;' /></td>";
-			_li += "	<td><textarea cols='60' rows='4' id='campoDesc'  style='border:1px solid #f00;'></textarea></td>";
+			_li += "<tr valign='center' class='tiraInput'>";
+			_li += "	<td width='25%'><input type='text' id='campoData' style='border:1px solid #f00;width:65%;margin-left:30px; padding:5px;' /></td>";
+			_li += "	<td width='75%'><textarea cols='60' rows='4' id='campoDesc'  style='border:1px solid #f00;width:550px;margin-top:20px; margin-left:20px; padding:5px;'></textarea></td>";
 			_li += "</tr>";
 
 
