--- a/app/views/teams/save_activity.html.erb
+++ b/app/views/teams/save_activity.html.erb
@@ -1,13 +1,13 @@
 <% if @meeting.size > 0 %>
+
 	<% @meeting.each do |f| %>
-	<tr>
-		<td><%= f.timetable %></td>
-		<td><%= f.description %></td>
+	 <tr class="<%= cycle("branca", "cinza") -%>">
+		<td width='25%' align='center'><%= f.timetable %></td>
+		<td width='75%'><%= f.description %></td>
 	</tr>
 	<% end %>
 <% else %>
 	<tr>
-		<td> </td>
-		<td>Nenhuma atividade cadastrada</td>
+		<td align='center'>Nenhuma atividade cadastrada.</td>
 	</tr>
 <% end %>
