Corrigido o layout de Interessados

--- a/app/views/interesteds/_form.html.erb
+++ b/app/views/interesteds/_form.html.erb
@@ -39,10 +39,10 @@
         </label>
     </li>
 
-    <li>
+    <li class='textAreaDescricao'>
         <label>
             <span>Interesses: </span><br/>
-            <%= i.text_area :interest, :class => "inputMedio input" %>
+            <%= i.text_area :interest, :class => "textarea" %>
         </label>
     </li>
     
