--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -7,9 +7,14 @@
   <div id="guardaPesquisa">
     <%= form_for :filtro, :url => search_services_path, :method => "GET" do |f| %>
       <ul>
-        <li class="noPaddingHomes">
+        
+		<li class="noPaddingHomes hidePA ">
+          <%= f.text_field :nome, :class => "inputGde input", :id => 'campoBusca' %>
+        </li>
+		
+		 <li class="escondidoPesquisaAvancada">
           <label for="campoNome">Nome</label>
-          <%= f.text_field :rg, :class => "inputGde input", :id => 'name' %>
+          <%= f.text_field :nome, :class => "inputGde input", :id => 'name' %>
         </li>
 
         <li class="escondidoPesquisaAvancada">
@@ -28,13 +33,16 @@
         </li>
 
         <li class="escondidoPesquisaAvancada">
-          <label for="campoNome">Ativo:</label>
-          <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select" %>
+          <label for="campoNome">Ativo:</label><br/>
+          <%= f.select :inactive, [["Sim",true],["Não",false]], { :include_blank => true }, :class => "select selectGde" %>
         </li>
+		
         <li class="liPesquisaAvancada">
           <%= link_to 'Pesquisa avançada', 'javascript:void(0);', :class => 'pesquisaAvancada', :id => 'btPesquisaAvancada' %>
           <%= f.submit 'Pesquisar', :class => 'btEditarForm', :id => 'ajaxBtRealizarPesquisa' %>
         </li>
+		
+		
       </ul>
     <% end %>
   <%= link_to 'Novo Serviço', new_service_path, class: "btEnviarForm" %>
@@ -44,9 +52,9 @@
     <h2>Últimos serviços</h2>
     <% @services.each do |service| %>
       <p>
-        <span><%= service.name %></span>
-        <span><%= service.estimated_time %></span>
-        <span><%= number_to_currency service.default_value %></span>
+        <span><strong><%= service.name %></strong><br/>
+		<small><%= service.estimated_time %> - 
+        <%= number_to_currency service.default_value %><small></span>
         <%= link_to 'Editar', edit_service_path(service), :class => 'btVoltarForm' %>
       </p>
     <% end %>
