--- a/app/views/providers/_providers.html.erb
+++ b/app/views/providers/_providers.html.erb
@@ -15,7 +15,7 @@
       <td width="20%"><span><%= provider.name %></span></td>
       <td width="20%"><span><%= provider.cpf %></span></td>
       <td width="20%"><span><%= provider.rg %></span></td>
-      <td width="20%"><span><%= provider.address.country_id %></span></td>
+      <td width="20%"><span><%= provider.estado %></span></td>
       <td width="20%"><span><%= provider.address.city %></span></td>
       <td width="20%"><span><%= provider.is_active %></span></td>
       <td width="20%"><span class="centralizaBts"><%= link_to 'Deletar', provider, method: :delete, data: { confirm: 'Deseja realmente exlcuir este providere do sistema?' }, class: "btVoltarExcluirForm" %></span></td>
