--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,31 +1,31 @@
 <%= form_for @schedule do |f| %>
   <%= render "shared/error_messages", :record => @schedule %>
   <ul>
-    <li>
-      <label>
-        <span>Código:</span>
-        <%= f.object.code %>
-        <%= f.hidden_field :code, :value => f.object.code %>
-      </label>
-    </li>
+	<li class='codigo'>
+        <label>
+            <span>Código: </span>
+            <%= f.hidden_field :code, :value => f.object.code %> 			
+			<%= f.text_field :code, :value => f.object.code, :class => "inputMedio input",:disabled => true %>
+			
+        </label>
 
     <li>
       <label>
         <span>Serviço:</span><br/>
-        <%= f.select :service_id, services.map {|s| [s.name, s.id] }, {}, :class => "inputMedio input" %>
+        <%= f.select :service_id, services.map {|s| [s.name, s.id] }, {}, :class => "select selectMedio" %>
       </label>
     </li>
     <li>
       <label>
         <span>Prestador:</span><br/>
-        <%= f.select :provider_id, providers.map {|p| [p.name, p.id] }, {}, :class => "inputMedio input" %>
+        <%= f.select :provider_id, providers.map {|p| [p.name, p.id] }, {}, :class => "select selectMedio" %>
       </label>
     </li>
 
     <li>
       <label>
         <span>Cliente:</span><br/>
-        <%= f.select :client_id, clients.map {|c| [c.name, c.id] }, {}, :class => "inputMedio input" %>
+        <%= f.select :client_id, clients.map {|c| [c.name, c.id] }, {}, :class => "select selectMedio" %>
       </label>
     </li>
 
