--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -9,12 +9,12 @@
       <ul>
         
 		<li class="noPaddingHomes hidePA ">
-          <%= f.text_field :nome, :class => "inputGde input", :id => 'campoBusca' %>
+          <%= f.text_field :name, :class => "inputGde input", :id => 'campoBusca' %>
         </li>
 		
 		 <li class="escondidoPesquisaAvancada">
           <label for="campoNome">Nome</label>
-          <%= f.text_field :nome, :class => "inputGde input", :id => 'name' %>
+          <%= f.text_field :name, :class => "inputGde input", :id => 'name' %>
         </li>
 
         <li class="escondidoPesquisaAvancada">
