--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -8,6 +8,20 @@
       </label>
     </li>
 
+	 <li>
+      <label>
+        <span>CPF:</span><br/>
+        <%= f.text_field :cpf, :class => "inputMedio input cpf" %>
+      </label>
+    </li>
+
+    <li>
+      <label>
+        <span>RG:</span><br/>
+        <%= f.text_field :rg, :class => "inputMedio input rg" %>
+      </label>
+    </li>
+	
     <%= f.fields_for :address do |a| %>
       <li>
         <label>
@@ -37,41 +51,29 @@
         </label>
       </li>
 
-      <li>
+	   <li>
         <label>
-          <span>CEP:</span><br/>
-          <%= a.text_field :zipcode, :class => "inputMedio input cep" %>
+          <span>Cidade:</span><br/>
+          <%= a.text_field :city, :class => "inputMedio input" %>
         </label>
       </li>
-
+	  
       <li>
         <label>
           <span>Estado:</span><br/>
           <%= a.select :country_id, Country::STATES, { :prompt => 'Selecione um estado' }, :class => 'select selectMedio' %>
         </label>
       </li>
-
-      <li>
+		
+		
+	 <li style='width:800px'>
         <label>
-          <span>Cidade:</span><br/>
-          <%= a.text_field :city, :class => "inputMedio input" %>
+          <span>CEP:</span><br/>
+          <%= a.text_field :zipcode, :class => "inputMedio input cep" %>
         </label>
       </li>
+     
     <% end %>
-
-    <li>
-      <label>
-        <span>CPF:</span><br/>
-        <%= f.text_field :cpf, :class => "inputMedio input cpf" %>
-      </label>
-    </li>
-
-    <li>
-      <label>
-        <span>RG:</span><br/>
-        <%= f.text_field :rg, :class => "inputMedio input rg" %>
-      </label>
-    </li>
 
     <li id="btEnviarForm">
       <%= f.submit "Salvar cliente"%>
