Ajustes no modulo de cursos

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -30,8 +30,8 @@
 
     <li>
         <label>
-            <span>Tipo*:</span><br/>
-            <%= c.select :course_type, @course_category, { :prompt => "Escolha o tipo do curso" } , :class => 'select selectMedio' %>
+            <span>Tipo de curso*:</span><br/>
+            <%= c.select :course_type, @course_category, { :prompt => "Escolha o tipo de curso" } , :class => 'select selectMedio' %>
         </label>
     </li>
 
