--- a/app/views/interesteds/index.html.erb
+++ b/app/views/interesteds/index.html.erb
@@ -54,7 +54,7 @@
         </p>
       <% end %>
     <% else %>
-      Nenhuma turma cadastrada
+      Nenhum interessado cadastrado
     <% end %>
   </div>
 
