--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -11,34 +11,34 @@
 
     <li>
       <label>
-        <span>Serviço:</span><br/>
+        <span>Serviço*:</span><br/>
         <%= f.select :service_id, services.map {|s| [s.name, s.id] }, { :prompt => "Escolha um serviço" }, :class => "select selectMedio" %>
       </label>
     </li>
     <li>
       <label>
-        <span>Prestador:</span><br/>
+        <span>Prestador*:</span><br/>
         <%= f.select :provider_id, providers.map {|p| [p.name, p.id] }, { :prompt => "Escolha um prestador" }, :class => "select selectMedio" %>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Cliente:</span><br/>
+        <span>Cliente*:</span><br/>
         <%= f.select :client_id, clients.map {|c| [c.name, c.id] }, { :prompt => "Escolha um cliente" }, :class => "select selectMedio" %>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Tempo Estimado:</span><br/>
+        <span>Tempo Estimado*:</span><br/>
         <%= f.text_field :estimated_time, :class => "inputMedio input" %>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Numeros de Dias:</span><br/>
+        <span>Numeros de Dias*:</span><br/>
         <%= f.number_field :number_days, :class => "inputMedio input" %>
       </label>
     </li>
