--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -3,28 +3,28 @@
   <ul>
     <li>
       <label>
-        <span>Nome:</span><br/>
+        <span>Nome*:</span><br/>
         <%= f.text_field :name, :class => "inputMedio input", :id => "campoNome"%>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Numero de Dias:</span><br/>
+        <span>Número de dias*:</span><br/>
         <%= f.text_field :number_days, :class => "inputMedio input", :id => "number_days" %>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Tempo Estimado:</span><br/>
+        <span>Tempo Estimado*:</span><br/>
         <%= f.text_field :estimated_time, :class => "inputMedio input", :id => "estimated_time" %>
       </label>
     </li>
 
     <li>
       <label>
-        <span>Valor Padrão:</span><br/>
+        <span>Valor padrão* (R$):</span><br/>
         <%= f.text_field :default_value, :class => "inputMedio input", :id => "default_value" %>
       </label>
     </li>
